public static class ConstVariables
{
    // tags
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";

    // player animator
    public const string PLAYER_ISMOVING = "IsMoving";
    public const string PLAYER_ISWALKING = "IsWalking";
    public const string PLAYER_ISRUNING = "IsRuning";
    public const string PLAYER_ISHOLDINGWEAPON = "IsHoldingWeapon";
    public const string PLAYER_ISATTACKING = "IsAttacking";
    public const string PLAYER_GETHIT = "Gethit";
    public const string PLAYER_DIE = "Die";
    public const string PLAYER_TRIGGERATTACKANIM = "AttackTrigger";

    // Zombie
    public const string ZOMBIE_ISPATROLLING = "IsPatrolling";
    public const string ZOMBIE_ISCHASING = "IsChasing";
    public const string ZOMBIE_ISATTACKING = "IsAttacking";
    public const string ZOMBIE_ISFRENZY = "IsFrenzy";
    public const string ZOMBIE_DIE = "Die";
    public const string ZOMBIE_GETHIT = "Gethit";

    // Trap
    public const string TRAP_CLOSE = "close";
    public const string TRAP_OPEN = "open";
}
